--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
 
             <div>
-                <img src="./assets/images/bg-2.jpg" class="bg-2" alt="uriah image">
+                <img src="./assets/images/self.jpg" class="bg-2" alt="uriah image">
 
 
             </div>
